--- a/package.json
+++ b/package.json
@@ -24,12 +24,9 @@
     "clean": "rimraf _site tests/_artifacts",
     "format": "prettier --write . && eslint . --fix",
     "lint": "prettier --check . && eslint .",
-    "postinstall": "run-s setup:husky setup:si-utils setup:si-readme",
+    "postinstall": "is-ci || husky install",
     "serve": "anywhere -p 8080 -d ./_site",
     "serve:watch": "run-p build:watch serve",
-    "setup:husky": "is-ci || husky install",
-    "setup:si-utils": "sdown https://raw.githubusercontent.com/simple-icons/simple-icons/develop/scripts/utils.js si-utils.js",
-    "setup:si-readme": "sdown https://raw.githubusercontent.com/simple-icons/simple-icons/develop/README.md node_modules/simple-icons/README.md",
     "test": "npm run test:unit",
     "test:all": "cross-env NODE_OPTIONS=--experimental-vm-modules TEST_ENV=all jest --detectOpenHandles",
     "test:e2e": "cross-env NODE_OPTIONS=--experimental-vm-modules TEST_ENV=e2e jest --detectOpenHandles",
@@ -39,8 +36,7 @@
   "dependencies": {
     "blob-stream": "0.1.3",
     "fast-fuzzy": "1.12.0",
-    "pdfkit": "0.13.0",
-    "simple-icons": "8.12.0"
+    "pdfkit": "0.13.0"
   },
   "devDependencies": {
     "@prettier/plugin-pug": "2.4.2",
@@ -71,7 +67,7 @@
     "pug-loader": "2.4.0",
     "puppeteer": "19.8.3",
     "rimraf": "4.4.1",
-    "sdown": "1.0.2",
+    "simple-icons": "8.12.1",
     "svgo": "3.0.2",
     "webpack": "5.77.0",
     "webpack-cli": "5.0.1"
