--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development",
     "build:watch": "npm run build:dev -- --watch",
-    "clean": "rimraf _site tests/_artifacts",
+    "clean": "del-cli _site tests/_artifacts",
     "format": "prettier --write . && eslint . --fix",
     "lint": "prettier --check . && eslint .",
     "postinstall": "is-ci || husky install",
@@ -47,6 +47,7 @@
     "cross-env": "7.0.3",
     "css-loader": "6.8.1",
     "css-minimizer-webpack-plugin": "5.0.1",
+    "del-cli": "5.1.0",
     "eslint": "8.48.0",
     "eslint-config-simple-icons": "0.1.2",
     "get-relative-luminance": "1.0.0",
@@ -66,7 +67,6 @@
     "pug-lexer": "5.0.1",
     "pug-loader": "2.4.0",
     "puppeteer": "21.1.1",
-    "rimraf": "5.0.1",
     "simple-icons": "9.20.0",
     "svgo": "3.0.2",
     "webpack": "5.88.2",
