--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,8 @@ jobs:
         with:
           app-id: ${{ vars.BOT_APP_ID }}
           private-key: ${{ secrets.BOT_PRIVATE_KEY }}
+          owner: 'simple-icons'
+          repositories: 'simple-icons,simple-icons-website'
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -38,6 +40,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build Website
+        env:
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
         run: npm run build
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
