--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -21,10 +21,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
+          token: ${{ steps.app-token.outputs.token }}
           # Ensure we are checked out on the master branch
           ref: master
-          # Ensure custom credentials are used when pushing
-          persist-credentials: false
       - name: Use Node.js 20.x
         uses: actions/setup-node@v4
         with:
